--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,14 +21,14 @@ welcome.message: \u4E16\u754C\u4F60\u597D
 # spring.messages.basename=messages, messages2
 
 ###:for DB - datasource - MySQL
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/ezban?serverTimezone=Asia/Taipei
-#spring.datasource.username=root
-#spring.datasource.password=1qaz2wsx
-# spring.jpa.show-sql=true
-# spring.datasource.jndi-name=jdbc/TestDB3
-# spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-# spring.jpa.hibernate.ddl-auto=none
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ezban?serverTimezone=Asia/Taipei
+spring.datasource.username=root
+spring.datasource.password=a123456789
+#spring.jpa.show-sql=true
+#spring.datasource.jndi-name=jdbc/TestDB3
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=none
 
 ###:context path
 # server.servlet.context-path=/
